Add good and bad

--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+    <title>Accessibility samples</title>
 </head>
-<body>Hello</body>
+<body>
+<ul>
+    <li><a href="good/index.html">Good</a></li>
+    <li><a href="bad/index.html">Bad</a></li>
+</ul>
+</body>
 </html>
