add links to phil's webform pages

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,8 @@
 <ul>
     <li><a href="good/index.html">Good</a></li>
     <li><a href="bad/index.html">Bad</a></li>
+    <li><a href="webform/da/index.html">DA webform to Phils machine</a></li>
+    <li><a href="webform/projectRequest/index.html">Project Request webform to Phils machine</a></li>
 </ul>
 </body>
 </html>
