Create Workspace Request form cleanup

--- a/site/webform/projectRequest/index.html
+++ b/site/webform/projectRequest/index.html
@@ -457,7 +457,7 @@ return true;
 					<tr>
 
 
-						<td valign="top" style="width:70px;"><img src='http://devppm.daptiv.com/graphics/icons/items/icon_createprojectrequest.jpg' /></td>
+						<td valign="top" style="width:70px;"><img src='http://devppm.daptiv.com/graphics/icons/items/icon_createprojectrequest.jpg'  /></td>
 
 
 			 <td valign="top" class="itembrowser-headerlabel">
@@ -781,7 +781,7 @@ return true;
 				<TR valign="top">
 
 
-					<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdRequestName" align="right" class="itembrowser-form-label" nowrap="nowrap"><span class="itembrowser-form-required">*</span><span>Request Name </span>
+					<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdRequestName" align="right" class="itembrowser-form-label" nowrap="nowrap"><span class="itembrowser-form-required">*</span><span><label for="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_txtRequestName">Request Name</label></span>
 
 
 						</TD>
@@ -806,7 +806,7 @@ return true;
 				<tr id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_trRequestDesc" valign="top">
 
 
-	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdSummary" align="right" class="itembrowser-form-label" nowrap="nowrap"><span>Description </span>
+	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdSummary" align="right" class="itembrowser-form-label" nowrap="nowrap"><span> <label for="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_txtRequestDesc">Description</label></span>
 
 
 						</TD>
@@ -866,7 +866,7 @@ return true;
 				<tr id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_trPriority" valign="top">
 
 
-	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdPriority" align="right" class="itembrowser-form-label" nowrap="nowrap"><span>Priority </span>
+	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdPriority" align="right" class="itembrowser-form-label" nowrap="nowrap"><span><label for="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_ddlRequestPriority">Priority</label></span>
 
 
 
@@ -916,7 +916,7 @@ return true;
 				<tr id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_trBudget" valign="top">
 
 
-	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdBudget" align="right" class="itembrowser-form-label" nowrap="nowrap"><span>Budget ($) </span>
+	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdBudget" align="right" class="itembrowser-form-label" nowrap="nowrap"><span><label for="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_txtRequestBudget">Budget ($)</label></span>
 
 
 
@@ -941,7 +941,7 @@ return true;
 				<tr id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_trStartDate" valign="top">
 
 
-	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdStartDate" align="right" class="itembrowser-form-label" nowrap="nowrap"><span class="itembrowser-form-required">*</span><span>Planned Start </span>
+	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdStartDate" align="right" class="itembrowser-form-label" nowrap="nowrap"><span class="itembrowser-form-required">*</span><span><label for="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_dpStartDate_day">Planned Start</label></span>
 
 
 						</TD>
@@ -966,7 +966,7 @@ return true;
 				<tr id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_trEndDate" valign="top">
 
 
-	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdEndDate" align="right" class="itembrowser-form-label" nowrap="nowrap"><span class="itembrowser-form-required">*</span><span>Planned Finish </span>
+	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdEndDate" align="right" class="itembrowser-form-label" nowrap="nowrap"><span class="itembrowser-form-required">*</span><span><label for="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_dpEndDate_day">Planned Finish </label></span>
 
 
 						</TD>
@@ -988,7 +988,7 @@ return true;
 				<tr id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_trExpenses" valign="top">
 
 
-	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdExpenses" align="right" class="itembrowser-form-label" nowrap="nowrap"><span>Estimated Expenses ($) </span>
+	<TD id="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_tdExpenses" align="right" class="itembrowser-form-label" nowrap="nowrap"><span><label for="Admin_ProjectRequest_CreateProjectRequestWizard2_ascx594cb226_db2e_49ef_a3d7_07b5fcf64317_txtExpenses">Estimated Expenses ($) </label></span>
 
 
 						</TD>
