--- a/site/good/index.html
+++ b/site/good/index.html
@@ -5,7 +5,77 @@
     <title>I'm so good</title>
 </head>
 <body>
-<Label for="important">Type something important!</Label>
-<input id="important" type="text"/>
+<p role="banner">Accessibility is simple, if you follow best practices for HTML5 and semantic HTML</p>
+
+<p>
+    Let's start this page with a lot of blather, to demonstrate navigation.
+</p>
+
+<p style="font-size: 2px">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+    laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+    sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+    amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+    aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+    laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
+    velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+<div role="main">
+    <h1>Things you don't need to do, and shouldn't</h1>
+    <div> Don't create an separate site for accessibility.
+        Here is <a href="http://www.amazon.com/gp/aw/ref=mw_access">Amazon's accessible site.</a>.
+        It does not have the same features, and it is obvious that they have not put effort into learning accessibility features. The first input field does not have a label element.
+    </div>
+    <h1>Accessibility samples</h1>
+
+    <h3>Label samples</h3>
+
+    <div>Labels should have 'label for'.</div>
+    <div>
+        <Label for="important">Type something important!</Label>
+        <input id="important" type="text"/>
+    </div>
+
+    <h3>Tables</h3>
+
+    <div>
+        ChromeVox appears to have problems recognizing tables.
+    </div>
+    <div>
+        <table border="1">
+            <thead>
+            <tr>
+                <th>Value</th>
+                <th>One</th>
+                <th>Two</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Cats</td>
+                <td>Tabby</td>
+                <td>Siamese</td>
+            </tr>
+            <tr>
+                <td>Dogs</td>
+                <td>Mutt</td>
+                <td>Pug</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <h3>Use alt text for images</h3>
+    <img src="http://www.changepoint.com/App_Themes/Changepoint/Images/changepoint-logo.png"
+         alt="Changepoint - now the proud owner of Daptiv, the on demand leader in Project Portfolio Management">
+
+    <h3>Using ARIA landmark roles</h3>
+
+    <div>
+        If you can't easily structure your page for accessible navigation, you can use landmark roles. This page uses
+        "banner" and "main".
+        You can find more examples at <a href="http://www.html5accessibility.com/tests/roles-land.html">
+        this example page</a>.
+    </div>
+</div>
 </body>
-</html>admi
+</html>
